--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
     </dependency>
+    <dependency>
+        <groupId>org.ini4j</groupId>
+        <artifactId>ini4j</artifactId>
+        <version>0.5.4</version>
+    </dependency>
 </dependencies>
 </project>
