config.ini initialized with default values

--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -1,6 +1,7 @@
 ; Ubicacion log
 [LogFile]
-name = manakarna.log
+directory = C:\Program Files (x86)\GameforgeLive\Games\ESP_spa\AION\Download
+filename = Chat.log
 
 ; Otros parametros
 [Otros]
